from datetime import datetime

from sqlmodel import Column, DateTime, Field, SQLModel, func


# базовая модель таблиц. Все записи таблиц включают идентификатор, дату и время создания и обновления
class BaseModel(SQLModel):
    id: int = Field(primary_key=True)
    created_at: datetime = Field(sa_column=Column(DateTime(timezone=True), default=func.now()))
    updated_at: datetime = Field(sa_column=Column(DateTime(timezone=True), default=func.now(), onupdate=func.now()))